<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFA00D"
    android:padding="@dimen/triomobil_30dp_padding"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:contentDescription="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher" />
    
    <EditText
        android:id="@+id/login_user_name"
        android:layout_width="wrap_content"
        android:paddingLeft="@dimen/triomobil_10dp_padding"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:inputType="textEmailAddress"
        android:layout_margin="@dimen/triomobil_10dp_padding"
        android:background="#FFA0BA"
        android:ems="10"
        android:hint="@string/user_name" />
    
    <EditText 
        android:id="@+id/login_password"
        android:paddingLeft="@dimen/triomobil_10dp_padding"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/triomobil_10dp_padding"
        android:background="#FFA0BA"
        android:ems="10"
        android:hint="@string/password"/>
    <Button 
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="@dimen/triomobil_10dp_padding"
        android:layout_gravity="center"
        android:background="#FFFFFF"
        android:lines="1"
        android:ems="10"
        android:text="@string/enter"/>

</LinearLayout>
