<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="#FF0000"
        android:orientation="vertical" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_margin="@dimen/triomobil_10dp_padding"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/debug"
                    android:textSize="@dimen/triomobil_detail_page_text_size" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/debug"
                    android:textSize="@dimen/triomobil_detail_page_text_size" />
            </TableRow>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_margin="@dimen/triomobil_10dp_padding"
            android:layout_height="match_parent" >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <Button
                    android:id="@+id/detail_show_in_the_map_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/detail_show_in_the_map" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <Button
                    android:layout_width="match_parent"
                    android:id="@+id/detail_block_vehicle_btn"
                    android:layout_height="match_parent"
                    android:text="@string/detail_block_vehicle" />
            </TableRow>
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/detail_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>
    </LinearLayout>

</LinearLayout>